Barra de tarefas index.html
adicionei uma barra de tarefas interativa

--- a/Projeto Techsolution summit/index.html
+++ b/Projeto Techsolution summit/index.html
@@ -2,14 +2,25 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="3">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>TechSolutions Banner</title>
 </head>
 <body>
 
+
+  <nav class="navbar">
+  <ul>
+    <li><a href="#inicio">Início</a></li>
+    <li><a href="#sobre">Sobre</a></li>
+    <li><a href="#palestrantes">Palestrantes</a></li>
+    <li><a href="#inscreva-se">Inscreva-se</a></li>
+  </ul>
+</nav>
+
    <header> 
-  <section class="hero">
+  <section id="inicio" class="hero">
     <img src="IMG/Lovepik_com-401616425-technology-future-face-scan-model-3d-line-removebg-preview.png" alt="Ícone TechSolutions">
     
     <div class="hero-text">
@@ -35,9 +46,8 @@
 
 
 </header>
-<fieldset class="ilumination">
+<fieldset class="ilumination" id="sobre">
 <nav> 
-<form action=""></form>
    <center>
       <h3> <strong> SOBRE</strong></h3>
    </center>
@@ -97,7 +107,7 @@
       <h3> <strong> PALESTRANTES</strong></h3>
    </center>
 <BR> 
-<div class="palestrantes-container">
+<div id="palestrantes" class="palestrantes-container">
 
   <div class="palestrante">
     <img src="IMG/foto1.jpeg" alt="Carla Nunes" />
@@ -141,7 +151,7 @@
 
 <center>
       
-<H1 style="color:  #00ff66;"> INSCREVA-SE AGORA</H1>
+<H1 id="increva-se" style="color:  #00ff66;"> INSCREVA-SE AGORA</H1>
 </center>
 
 <center>
