caixas invisiveis formulario.html
tirei as caixas tradicionais do html e estilizei para elas ficarem invisiveis

--- a/Projeto Techsolution summit/formulario.html
+++ b/Projeto Techsolution summit/formulario.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="3">
   <title>Formulário</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
 
 
 
-<fieldset class="iluminations"> 
+<fieldset class="ilumination"> 
    Nome Completo: 
    <input type="text">
 
@@ -69,8 +70,12 @@
 
 </fieldset>
 
+<br>
+<br>
+
 <div class="barra-luz"></div>
 
+<br>
 
 <blockquote class="frase">
   “A inovação é o que distingue um líder de um seguidor.” – Steve Jobs
